[gd_scene load_steps=9 format=3]

[ext_resource type="Theme" uid="uid://b2kbr0yu1h6tg" path="res://ui/theme.tres" id="1_0sglw"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_gnx7s"]
[ext_resource type="Texture2D" uid="uid://c6auno7vgvnpi" path="res://sprites/check.png" id="3_cm3f6"]
[ext_resource type="StyleBox" path="res://ui/styles/stylebox_button.tres" id="4_ndd0l"]
[ext_resource type="StyleBox" path="res://ui/styles/stylebox_button_pressed.tres" id="5_oeqwt"]
[ext_resource type="StyleBox" path="res://ui/styles/stylebox_button_hover.tres" id="6_xp208"]

[sub_resource type="ImageTexture" id="3"]

[sub_resource type="ImageTexture" id="2"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0sglw")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_gnx7s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 64
text = "T E R M I N A T E D"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "       [R] TO START
     [ESC] TO QUIT
	
    [WASD] TO MOVE
HOLD [LMB] TO SHOOT
 TAP [LMB] FOR SHOTGUN
     [RMB] FOR LASER"

[node name="AuthorLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "VERSION 2.0.0-DEV
BY AARON FRIESEN
HTTPS://FRIE.DEV"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="SoundLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "SOUND"
horizontal_alignment = 2

[node name="SoundCheckBox" type="CheckBox" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_icons/checked = ExtResource("3_cm3f6")
theme_override_icons/unchecked = SubResource("3")
theme_override_icons/radio_checked = ExtResource("3_cm3f6")
theme_override_icons/radio_unchecked = SubResource("2")
theme_override_styles/normal = ExtResource("4_ndd0l")
theme_override_styles/pressed = ExtResource("5_oeqwt")
theme_override_styles/disabled = ExtResource("5_oeqwt")
theme_override_styles/hover = ExtResource("6_xp208")
theme_override_styles/hover_pressed = ExtResource("4_ndd0l")
theme_override_styles/focus = ExtResource("4_ndd0l")
button_pressed = true

[node name="MusicLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "MUSIC"
horizontal_alignment = 2

[node name="MusicCheckBox" type="CheckBox" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_icons/checked = ExtResource("3_cm3f6")
theme_override_icons/unchecked = SubResource("3")
theme_override_icons/radio_checked = ExtResource("3_cm3f6")
theme_override_icons/radio_unchecked = SubResource("2")
theme_override_styles/normal = ExtResource("4_ndd0l")
theme_override_styles/pressed = ExtResource("5_oeqwt")
theme_override_styles/disabled = ExtResource("5_oeqwt")
theme_override_styles/hover = ExtResource("6_xp208")
theme_override_styles/hover_pressed = ExtResource("4_ndd0l")
theme_override_styles/focus = ExtResource("4_ndd0l")
button_pressed = true

[node name="FullscreenLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "FULLSCREEN"
horizontal_alignment = 2

[node name="FullscreenCheckBox" type="CheckBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_icons/checked = ExtResource("3_cm3f6")
theme_override_icons/unchecked = SubResource("3")
theme_override_icons/radio_checked = ExtResource("3_cm3f6")
theme_override_icons/radio_unchecked = SubResource("2")
theme_override_styles/normal = ExtResource("4_ndd0l")
theme_override_styles/pressed = ExtResource("5_oeqwt")
theme_override_styles/disabled = ExtResource("5_oeqwt")
theme_override_styles/hover = ExtResource("6_xp208")
theme_override_styles/hover_pressed = ExtResource("4_ndd0l")
theme_override_styles/focus = ExtResource("4_ndd0l")

[node name="ScreenShakeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "SCREEN SHAKE"
horizontal_alignment = 2

[node name="ScreenShakeCheckbox" type="CheckBox" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_icons/checked = ExtResource("3_cm3f6")
theme_override_icons/unchecked = SubResource("3")
theme_override_icons/radio_checked = ExtResource("3_cm3f6")
theme_override_icons/radio_unchecked = SubResource("2")
theme_override_styles/normal = ExtResource("4_ndd0l")
theme_override_styles/pressed = ExtResource("5_oeqwt")
theme_override_styles/disabled = ExtResource("5_oeqwt")
theme_override_styles/hover = ExtResource("6_xp208")
theme_override_styles/hover_pressed = ExtResource("4_ndd0l")
theme_override_styles/focus = ExtResource("4_ndd0l")
button_pressed = true

[connection signal="toggled" from="GridContainer/SoundCheckBox" to="." method="_on_sound_check_box_toggled"]
[connection signal="toggled" from="GridContainer/MusicCheckBox" to="." method="_on_music_check_box_toggled"]
[connection signal="toggled" from="GridContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="toggled" from="GridContainer/ScreenShakeCheckbox" to="." method="_on_screen_shake_checkbox_toggled"]
